src/test/deca/context/valid/comp_class_null.deca
class A{
}
{
A a = null;
a == null;
a != null;
}