src/test/deca/context/invalid/print_class.deca
class A{
}
{
A a;
println(a);
}